removed unnecessary comment

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<!-- Unr stands for Unreadable -->
-		<p>I've always liked coding, and I have just started a postmark collection, so here's a combination of the two!</p>
+		<p>I've always liked coding, and I have just started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
 		<div id="toc_container">
 			<p class="toc_title">Contents</p>
 			<ul class="toc_list">
