--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>Postmark collection</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<p>I've always liked coding, and I have just started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
+		<div id="contactme">
+			<a href="mailto:eamonnspostmarks@gmail.com">Contact me</a>
+		</div>
 		<div id="toc_container">
 			<p class="toc_title">Contents</p>
 			<ul class="toc_list">
