--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<p>I've always liked coding, and I have just started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
 		<div id="contactme">
-			<a href="mailto:eamonnspostmarks@gmail.com">Contact me</a>
+			<p>If you find something wrong, let me know by <a href="https://github.com/lopezeamonn/postmark/issues/new">creating an issue on GitHub</a> or <a href="mailto:eamonnspostmarks@gmail.com">emailing me.</a></p>
 		</div>
 		<div id="toc_container">
 			<p class="toc_title">Contents</p>
