--- a/index.html
+++ b/index.html
@@ -11,301 +11,301 @@
 			<p>If you find something wrong, let me know by <a href="https://github.com/lopezeamonn/postmark/issues/new">creating an issue on GitHub</a> or <a href="mailto:eamonnspostmarks@gmail.com">emailing me.</a></p>
 		</div>
 		<div id="toc_container">
+			<!-- unr stands for unreadable -->
 			<p class="toc_title">Contents</p>
 			<ul class="toc_list">
 				<li>
-					<a href="canada">Canada</a>
+					<a href="#can">Canada</a>
 					<ul>
 						<li>
-							<a href="canada/ontario">Ontario</a>
+							<a href="#can-on">Ontario</a>
 							<ul>
 								<li>
-									<a href="canada/ontario/toronto-m4l">Toronto (M4L)</a>
+									<a href="#can-on-m4l">Toronto (M4L)</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="ireland">Ireland</a>
+					<a href="#irl">Ireland</a>
 					<ul>
 						<li>
-							<a href="ireland/unreadable">Unreadable</a>
+							<a href="#irl-unr">Unreadable</a>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="niger">Niger</a>
+					<a href="#ner">Niger</a>
 					<ul>
 						<li>
-							<a href="niger/maradi">Maradi</a>
+							<a href="ner-m">Maradi</a>
 						</li>
 						<li>
-							<a href="niger/niamey">Niamey</a>
+							<a href="ner-n">Niamey</a>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="russia">Russia</a>
+					<a href="#rus">Russia</a>
 					<ul>
 						<li>
-							<a href="russia/st-petersburg-200960">Saint Petersburg (200960)</a>
+							<a href="rus-stp">St. Petersburg 200960</a>
 						</li>
 						<li>
-							<a href="russia/sevastopol-299">Sevastopol (299)</a>
+							<a href="rus-sev">Sevastopol</a>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="tanzania">Tanzania</a>
+					<a href="#tza">Tanzania</a>
 					<ul>
 						<li>
-							<a href="tanzania-unreadable">Unreadable</a>
+							<a href="tza-unr">Unreadable</a>
 						</li>
 					</ul>
 				</li>
 				<li>
-					<a href="united-states">United States</a>
+					<a href="#usa">United States</a>
 					<ul>
 						<li>
-							<a href="united-states/alaska">Alaska</a>
+							<a href="#usa-ak">Alaska</a>
 							<ul>
 								<li>
-									<a href="united-states/alaska/anchorage-995">Anchorage (995)</a>
+									<a href="#usa-ak-995">Anchorage (995)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/arizona">Arizona</a>
+							<a href="#usa-az">Arizona</a>
 							<ul>
 								<li>
-									<a href="united-states/arizona/phoenix-852">Phoenix (852)</a>
+									<a href="#usa-az-852">Phoenix (852)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="USA-CA">California</a>
+							<a href="#usa-ca">California</a>
 							<ul>
 								<li>
-									<a href="united-states/california/oakland-945">Oakland (945)</a>
+									<a href="#usa-ca-945">Oakland (945)</a>
 								</li>
 								<li>
-									<a href="united-states/california/san-bernardino-924">San Bernardino (924)</a>
+									<a href="#usa-ca-924">San Bernardino (924)</a>
 								</li>
 								<li>
-									<a href="united-states/california/san-jose-950">San Jose (950)</a>
+									<a href="#usa-ca-950">San Jose (950)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/colorado">Colorado</a>
+							<a href="#usa-co">Colorado</a>
 							<ul>
 								<li>
-									<a href="united-states/colorado/denver-800">Denver (800)</a>
+									<a href="#usa-co-800">Denver (800)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/district-of-columbia">District of Columbia</a>
+							<a href="#usa-dc">District of Columbia</a>
 							<ul>
 								<li>
-									<a href="united-states/district-of-columbia/washington-200">Washington/Capital District (200)</a>
+									<a href="#usa-dc-200">Washington/Capital District (200)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/florida">Florida</a>
+							<a href="#usa-fl">Florida</a>
 							<ul>
 								<li>
-									<a href="united-states/florida/jacksonville-320">Jacksonville (320)</a>
+									<a href="#usa-fl-320">Jacksonville (320)</a>
 								</li>
 								<li>
-									<a href="united-states/florida/orlando-328">Orlando (328)</a>
+									<a href="#usa-fl-328">Orlando (328)</a>
 								</li>
 								<li>
-									<a href="united-states/florida/tampa-st-petersburg-335">Tampa/St. Petersburg (335)</a>
+									<a href="#usa-fl-335">Tampa/St. Petersburg (335)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/georgia">Georgia</a>
+							<a href="#usa-ga">Georgia</a>
 							<ul>
 								<li>
-									<a href="united-states/georgia/atlanta-metro-300">Atlanta Metro (300)</a>
+									<a href="#usa-ga-300">Atlanta Metro (300)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/indiana">Indiana</a>
+							<a href="#usa-in">Indiana</a>
 							<ul>
 								<li>
-									<a href="united-states/indiana/indianapolis-462">Indianapolis (462)</a>
+									<a href="#usa-in-462">Indianapolis (462)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/louisiana">Louisiana</a>
+							<a href="#usa-la">Louisiana</a>
 							<ul>
 								<li>
-									<a href="united-states/louisiana/new-orleans-700">New Orleans (700)</a>
+									<a href="#usa-la-700">New Orleans (700)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/massachusetts">Massachusetts</a>
+							<a href="#usa-ma">Massachusetts</a>
 							<ul>
 								<li>
-									<a href="united-states/massachusetts/boston-021">Boston (021)</a>
+									<a href="#usa-ma-021">Boston (021)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/maryland">Maryland</a>
+							<a href="#usa-md">Maryland</a>
 							<ul>
 								<li>
-									<a href="united-states/maryland/baltimore-212">Baltimore (212)</a>
+									<a href="#usa-md-212">Baltimore (212)</a>
 								</li>
 								<li>
-									<a href="united-states/maryland/damascus-20872">Damascus (20872)</a>
+									<a href="#usa-md-20872">Damascus (20872)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/michigan">Michigan</a>
+							<a href="#usa-mi">Michigan</a>
 							<ul>
 								<li>
-									<a href="united-states/michigan/grand-rapids-495">Grand Rapids (495)</a>
+									<a href="#usa-mi-495">Grand Rapids (495)</a>
 								</li>
 								<li>
-									<a href="united-states/michigan/metroplex-480">Metroplex (480)</a>
+									<a href="#usa-mi-480">Metroplex (480)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/missouri">Missouri</a>
+							<a href="#usa-mo">Missouri</a>
 							<ul>
 								<li>
-									<a href="united-states/missouri/kansas-city-640">Kansas City (640)</a>
+									<a href="#usa-mo-640">Kansas City (640)</a>
 								</li>
 								<li>
-									<a href="united-states/missouri/st-louis-630">St. Louis (630)</a>
+									<a href="#usa-mo-630">St. Louis (630)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/nebraska">Nebraska</a>
+							<a href="#usa-ne">Nebraska</a>
 							<ul>
 								<li>
-									<a href="united-states/nebraska/omaha-680">Omaha (680)</a>
+									<a href="#usa-ne-680">Omaha (680)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/new-hampshire">New Hampshire</a>
+							<a href="#usa-nh">New Hampshire</a>
 							<ul>
 								<li>
-									<a href="united-states/new-hampshire/manchester-030">Manchester (030)</a>
+									<a href="#usa-nh-030">Manchester (030)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/new-york">New York</a>
+							<a href="#usa-ny">New York</a>
 							<ul>
 								<li>
-									<a href="united-states/new-york/triboro-112">Triboro (Brooklyn, Queens, Staten I.) (112)</a>
+									<a href="#usa-ny-112">Triboro (Brooklyn, Queens, Staten I.) (112)</a>
 								</li>
 								<li>
-									<a href="united-states/new-york/westchester-105">Westchester (105)</a>
+									<a href="#usa-ny-105">Westchester (105)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/ohio">Ohio</a>
+							<a href="#usa-oh">Ohio</a>
 							<ul>
 								<li>
-									<a href="united-states/ohio/cleveland-440">Cleveland (440)</a>
+									<a href="#usa-oh-440">Cleveland (440)</a>
 								</li>
 								<li>
-									<a href="united-states/ohio/dayton-454">Dayton (454)</a>
+									<a href="#usa-oh-454">Dayton (454)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/oregon">Oregon</a>
+							<a href="#usa-or">Oregon</a>
 							<ul>
 								<li>
-									<a href="united-states/oregon/portland-972">Portland (972)</a>
+									<a href="#usa-or-972">Portland (972)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/pennsylvania">Pennsylvania</a>
+							<a href="#usa-pa">Pennsylvania</a>
 							<ul>
 								<li>
-									<a href="united-states/pennsylvania/harrisburg-171">Harrisburg (171)</a>
+									<a href="#usa-pa-171">Harrisburg (171)</a>
 								</li>
 								<li>
-									<a href="united-states/pennsylvania/philadelphia-190">Philadelphia (190)</a>
+									<a href="#usa-pa-190">Philadelphia (190)</a>
 								</li>
 								<li>
-									<a href="united-states/pennsylvania/philadelphia-19106-benf">Philadelpha (B. Free Franklin Post Office, 19106)</a>
+									<a href="#usa-pa-19106">Philadelphia - B. Free Franklin Post Office (19106)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/south-carolina">South Carolina</a>
+							<a href="#usa-sc">South Carolina</a>
 							<ul>
 								<li>
-									<a href="united-states/south-carolina/columbia-29292">Columbia (29292)</a>
+									<a href="#usa-sc-29292">Columbia (29292)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/south-dakota">South Dakota</a>
+							<a href="#usa-sd">South Dakota</a>
 							<ul>
 								<li>
-									<a href="united-states/south-dakota/sioux-falls-570">Sioux Falls (570)</a>
+									<a href="#usa-sd-570">Sioux Falls (570)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/utah">Utah</a>
+							<a href="#usa-ut">Utah</a>
 							<ul>
 								<li>
-									<a href="united-states/utah/parowan-84761">Parowan (84761)</a>
+									<a href="#usa-ut-84761">Parowan (84761)</a>
 								</li>
 								<li>
-									<a href="united-states/utah/payson-84651">Payson (84651)</a>
+									<a href="#usa-ut-84651">Payson (84651)</a>
 								</li>
 								<li>
-									<a href="united-states/utah/provo-846">Provo (846)</a>
+									<a href="#usa-ut-846">Provo (846)</a>
 								</li>
 								<li>
-									<a href="united-states/utah/provo-84605">Provo (84605)</a>
+									<a href="#usa-ut-84605">Provo (84605)</a>
 								</li>
 								<li>
-									<a href="united-states/utah/salt-lake-city-840">Salt Lake City (840)</a>
+									<a href="#usa-ut-840">Salt Lake City (840)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/virginia">Virginia</a>
+							<a href="#usa-va">Virginia</a>
 							<ul>
 								<li>
-									<a href="united-states/virginia/northern-220">Northern (220)</a>
+									<a href="#usa-va-220">Northern (220)</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="united-states/washington">Washington</a>
+							<a href="#usa-wa">Washington</a>
 							<ul>
 								<li>
-									<a href="united-states/washington/seattle-980">Seattle (980)</a>
+									<a href="usa-wa-980">Seattle (980)</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-				</li>
 			</ul>
 		</div>
 	</body>
