--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<p>I've always liked coding, and I have just started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
+		<p>I've always liked coding, and I have started a postmark collection, so here's a combination of the two! Hope everyone is doing well.</p>
 		<div id="contactme">
 			<p>If you find something wrong, let me know by <a href="https://github.com/lopezeamonn/postmark/issues/new">creating an issue on GitHub</a> or <a href="mailto:eamonnspostmarks@gmail.com">emailing me.</a></p>
 		</div>
