added canada section

--- a/index.html
+++ b/index.html
@@ -306,7 +306,23 @@
 							</ul>
 						</li>
 					</ul>
+				</li>
 			</ul>
+		</div>
+		<div id="main-container">
+			<div id="can">
+				<h2>Canada</h2>
+				<div id="can-on">
+					<h3>Ontario</h3>
+					<div id="can-on-m4l">
+						<h4>Toronto (M4L)</h4>
+						<div id="can-on-m4l-ps-1">
+							<img src="can/on/m4l/ps/16Dec15a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
