added kf to initials

--- a/initials.html
+++ b/initials.html
@@ -8,12 +8,16 @@
 		<h4>Initials page</h4>
 		<table border="2">
 			<tr>
-				<th>Initials as used</th>
 				<th>Name</th>
+				<th>Initials as used</th>
 			</tr>
 			<tr>
-				<td>PS</td>
-				<td>Patti Southerland</td>
+				<td>Kennedy Family</td>
+				<td>kf</td>
+			</tr>
+			<tr>
+				<td>Southerland, Patti</td>
+				<td>ps</td>
 			</tr>
 		</table>
 		<footer>
