added ireland section

--- a/index.html
+++ b/index.html
@@ -323,6 +323,16 @@
 					</div>
 				</div>
 			</div>
+			<div id="irl">
+				<h2>Ireland</h2>
+				<div id="irl-unr">
+					<h3>Unreadable</h3>
+					<div id="irl-unr-kf-1">
+						<img src="irl/unr/kf/Unreadable1a.jpg" height="150" width="375">
+						<caption>The Kennedy Family, Sparkill, NY 10976</caption>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
