added niger section

--- a/index.html
+++ b/index.html
@@ -333,6 +333,23 @@
 					</div>
 				</div>
 			</div>
+			<div id="ner">
+				<h2>Niger</h2>
+				<div id="ner-m">
+					<h3>Maradi</h3>
+					<div id="ner-m-ps-1">
+						<img src="ner/m/ps/15Jan19a.jpg" height="150" width="375">
+						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+				<div id="ner-n">
+					<h3>Niamey</h3>
+					<div id="ner-n-ps-1">
+						<img src="ner/n/ps/7Feb20a.jpg" height="150" width="375">
+						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
