added it to initials, russia section

--- a/index.html
+++ b/index.html
@@ -350,6 +350,16 @@
 					</div>
 				</div>
 			</div>
+			<div id="rus">
+				<h2>Russia</h2>
+				<div id="rus-stp">
+					<h3>St. Petersburg (200960)</h3>
+					<div id="rus-stp-it-1">
+						<img src="rus/stp/it/18Oct19a.jpg" height="150" width="375">
+						<caption>Officer T, Boyds, MD 20841</caption>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
