--- a/initials.html
+++ b/initials.html
@@ -19,6 +19,10 @@
 				<td>Southerland, Patti</td>
 				<td>ps</td>
 			</tr>
+			<tr>
+				<td>T., Officer Ivan</td>
+				<td>it</td>
+			</tr>
 		</table>
 		<footer>
 			<a href="index.html">Back to main page</a>
