added sev to rus

--- a/index.html
+++ b/index.html
@@ -359,6 +359,13 @@
 						<caption>Officer T, Boyds, MD 20841</caption>
 					</div>
 				</div>
+				<div id="rus-sev">
+					<h3>Sevastopol (299)</h3>
+					<div id="rus-sev-it-1">
+						<img src="rus/sev/it/11Nov19a.jpg" height="150" width="375">
+						<caption>Officer T, Boyds, MD 20841</caption>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
