added tanzania section

--- a/index.html
+++ b/index.html
@@ -367,6 +367,16 @@
 					</div>
 				</div>
 			</div>
+			<div id="tza">
+				<h2>Tanzania</h2>
+				<div id="tza-unr">
+					<h3>Unreadable</h3>
+					<div id="tza-unr-ps-1">
+						<img src="tza/unr/ps/2May12a.jpg" height="150" width="375">
+						<caption>Patti Southerland, Payson, UT 84651</caption>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
