added alaska section, e_cl to initials

--- a/index.html
+++ b/index.html
@@ -377,6 +377,19 @@
 					</div>
 				</div>
 			</div>
+			<div id="usa">
+				<h2>United States</h2>
+				<div id="usa-ak">
+					<h3>Alaska</h3>
+					<div id="usa-ak-995">
+						<h4>Anchorage (995)</h4>
+						<div id="usa-ak-995-e_cl-1">
+							<img src="usa/ak/995/e_cl/24Aug17a.jpg" height="150" width="375">
+							<caption>Ed & Cathy Lopez, Bartow, FL 33830</caption>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
