--- a/initials.html
+++ b/initials.html
@@ -16,6 +16,9 @@
 				<td>kf</td>
 			</tr>
 			<tr>
+				<td>Lopez, Ed & Cathy</td>
+				<td>e_cl</td>
+			<tr>
 				<td>Southerland, Patti</td>
 				<td>ps</td>
 			</tr>
