--- a/initials.html
+++ b/initials.html
@@ -18,6 +18,11 @@
 			<tr>
 				<td>Lopez, Ed & Cathy</td>
 				<td>e_cl</td>
+			</tr>
+			<tr>
+				<td>Matthews Family</td>
+				<td>mf</td>
+			</tr>
 			<tr>
 				<td>Southerland, Patti</td>
 				<td>ps</td>
