added california section; sl, sm to initials

--- a/index.html
+++ b/index.html
@@ -399,6 +399,38 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-ca">
+					<h3>California</h3>
+					<div id="usa-ca-945">
+						<h4>Oakland (945)</h4>
+						<div id="usa-ca-945-sl-1">
+							<img src="usa/ca/945/sl/4Apr20a.jpg" height="150" width="375">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
+					<div id="usa-ca-924">
+						<h4>San Bernardino (924)</h4>
+						<div id="usa-ca-924-sm-1">
+							<img src="usa/ca/924/sm/17Sep19a.jpg">
+							<caption>Skip Matthews, Palm Desert, CA 92211</caption>
+						</div>
+						<div id="usa-ca-924-sm-2">
+							<img src="usa/ca/924/sm/12Dec19a.jpg">
+							<caption>Skip Matthews, Palm Desert, CA 92211</caption>
+						</div>
+						<div id="usa-ca-924-sm-3">
+							<img src="usa/ca/924/sm/23Dec19a.jpg">
+							<caption>Skip Matthews, Palm Desert, CA 92211</caption>
+						</div>
+					</div>
+					<div id="usa-ca-950">
+						<h4>San Jose (950)</h4>
+						<div id="usa-ca-950-sl-1">
+							<img src="usa/ca/950/sl/10Apr19a.jpg">
+							<caption>Steve Lopez, Los Gatos, CA 95032</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
