--- a/initials.html
+++ b/initials.html
@@ -20,8 +20,15 @@
 				<td>e_cl</td>
 			</tr>
 			<tr>
+				<td>Lopez, Steve</td>
+				<td>sl</td>
+			<tr>
 				<td>Matthews Family</td>
 				<td>mf</td>
+			</tr>
+			<tr>
+				<td>Matthews, Skip</td>
+				<td>sm</td>
 			</tr>
 			<tr>
 				<td>Southerland, Patti</td>
