added colorado section

--- a/index.html
+++ b/index.html
@@ -431,6 +431,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-co">
+					<h3>Colorado</h3>
+					<div id="usa-ca-800">
+						<h4>Denver (800)</h4>
+						<div id="usa-co-800-jh-1">
+							<img src="usa/co/800/jh/5Dec19a.jpg" height="150" width="375">
+							<caption>Jason Hoffmann, Gaithersburg, MD 20882</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
