added dc section

--- a/index.html
+++ b/index.html
@@ -441,6 +441,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-dc">
+					<h3>District of Columbia</h3>
+					<div id="usa-dc-200">
+						<h4>Washington (200)</h4>
+						<div id="usa-dc-200-u-1">
+							<img src="usa/dc/200/u/28Aug19a.jpg" height="150" width="375">
+							<caption>Unknown</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
