--- a/initials.html
+++ b/initials.html
@@ -12,6 +12,10 @@
 				<th>Initials as used</th>
 			</tr>
 			<tr>
+				<td>Unknown</td>
+				<td>u</td>
+			</tr>
+			<tr>
 				<td>Hoffmann, Jason</td>
 				<td>jh</td>
 			</tr>
