--- a/initials.html
+++ b/initials.html
@@ -32,6 +32,10 @@
 				<td>sl</td>
 			</tr>
 			<tr>
+				<td>Maryland 4-H Foundation</td>
+				<td>md4hf</td>
+			</tr>
+			<tr>
 				<td>Matthews Family</td>
 				<td>mf</td>
 			</tr>
