--- a/initials.html
+++ b/initials.html
@@ -51,6 +51,10 @@
 				<td>T., Officer Ivan</td>
 				<td>it</td>
 			</tr>
+			<tr>
+				<td>University of Maryland Extension Office Montgomery County</td>
+				<td>umem</td>
+			</tr>
 		</table>
 		<footer>
 			<a href="index.html">Back to main page</a>
