added ef to dc section

--- a/index.html
+++ b/index.html
@@ -457,6 +457,10 @@
 							<img src="usa/dc/200/umem/12Sep19a.png" height="150" width="375">
 							<caption>University of Maryland Extension Office, Derwood, MD 20855</caption>
 						</div>
+						<div id="usa-dc-200-ef-1">
+							<img src="usa/dc/200/ef/10Dec19a.jpg" height="150" width="375">
+							<caption>English Family, Germantown, MD 20874</caption>
+						</div>
 					</div>
 				</div>
 			</div>
