added mj to dc section

--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@
 							<img src="usa/dc/200/ef/10Dec19a.jpg" height="150" width="375">
 							<caption>English Family, Germantown, MD 20874</caption>
 						</div>
+						<div id="usa-dc-200-mj-1">
+							<img src="usa/dc/200/mj/23Sep19a.jpg" height="150" width="375">
+							<caption>Megan Johnson, Gaithersburg, MD 20879</caption>
+						</div>
 					</div>
 				</div>
 			</div>
