--- a/initials.html
+++ b/initials.html
@@ -24,6 +24,10 @@
 				<td>jh</td>
 			</tr>
 			<tr>
+				<td>Megan Johnson</td>
+				<td>mj</td>
+			</tr>
+			<tr>
 				<td>Kennedy Family</td>
 				<td>kf</td>
 			</tr>
