added jh to dc section

--- a/index.html
+++ b/index.html
@@ -465,6 +465,10 @@
 							<img src="usa/dc/200/mj/23Sep19a.jpg" height="150" width="375">
 							<caption>Megan Johnson, Gaithersburg, MD 20879</caption>
 						</div>
+						<div id="usa-dc-200-jh-1">
+							<img src="usa/dc/200/jh/5Nov19a.jpg" height="150" width="375">
+							<caption>Jason Hoffmann, Gaithersburg, MD 20879/caption>
+						</div>
 					</div>
 				</div>
 			</div>
