added bracket to /caption on dc/jh, florida sec

--- a/index.html
+++ b/index.html
@@ -467,7 +467,17 @@
 						</div>
 						<div id="usa-dc-200-jh-1">
 							<img src="usa/dc/200/jh/5Nov19a.jpg" height="150" width="375">
-							<caption>Jason Hoffmann, Gaithersburg, MD 20879/caption>
+							<caption>Jason Hoffmann, Gaithersburg, MD 20879</caption>
+						</div>
+					</div>
+				</div>
+				<div id="usa-fl">
+					<h3>Florida</h3>
+					<div id="usa-fl-320">
+						<h4>Jacksonville (320)</h4>
+						<div id="usa-fl-320-tc-1">
+							<img src="usa/fl/320/tc/5Oct19a.jpg" height="150" width="375">
+							<caption>Topher Christiansen, Jacksonville, FL 32221</caption>
 						</div>
 					</div>
 				</div>
