--- a/initials.html
+++ b/initials.html
@@ -16,10 +16,13 @@
 				<td>u</td>
 			</tr>
 			<tr>
+				<td>Christiansen, Beth & Xavier</td>
+				<td>bxc</td>
+			</tr>
+			<tr>
 				<td>Christiansen, Topher</td>
 				<td>tc</td>
 			</tr>
-
 			<tr>
 				<td>English Family</td>
 				<td>ef</td>
