added cf to orlando section

--- a/initials.html
+++ b/initials.html
@@ -24,6 +24,10 @@
 				<td>tc</td>
 			</tr>
 			<tr>
+				<td>Cromar, Jillian & Will</td>
+				<td>cf</td>
+			</tr>
+			<tr>
 				<td>English Family</td>
 				<td>ef</td>
 			</tr>
