--- a/index.html
+++ b/index.html
@@ -486,6 +486,10 @@
 							<img src="usa/fl/328/bxc/6Sep19a.png" height="150" width="375">
 							<caption>Beth and Xavier Christiansen, Melbourne, FL 32901</caption>
 						</div>
+						<div id="usa-fl-328-cf-1">
+							<img src="usa/fl/328/cf/21Aug19a.jpg" height="150" width="375">
+							<caption>Will & Jillian Cromar, Seattle, WA 98109</caption>
+						</div>
 					</div>
 				</div>
 			</div>
