--- a/initials.html
+++ b/initials.html
@@ -36,7 +36,7 @@
 				<td>jh</td>
 			</tr>
 			<tr>
-				<td>Megan Johnson</td>
+				<td>Johnson, Megan</td>
 				<td>mj</td>
 			</tr>
 			<tr>
@@ -46,6 +46,10 @@
 			<tr>
 				<td>Lopez, Ed & Cathy</td>
 				<td>e_cl</td>
+			</tr>
+			<tr>
+				<td>Lopez, Michael & Mary Beth</td>
+				<td>mmbl</td>
 			</tr>
 			<tr>
 				<td>Lopez, Steve</td>
