--- a/index.html
+++ b/index.html
@@ -495,6 +495,17 @@
 							<caption>Michael and Mary Beth Lopez, Cocoa, FL 32926</caption>
 						</div>
 					</div>
+					<div id="usa-fl-335">
+						<h4>Tampa/St. Petersburg (335)</h4>
+						<div id="usa-fl-335-e_cl-1">
+							<img src="usa/fl/335/e_cl/15Jul19a.jpg" height="150" width="375">
+							<caption>Ed & Cathy Lopez, Bartow, FL 33830</caption>
+						</div>
+						<div id="usa-fl-335-e_cl-2">
+							<img src="usa/fl/335/e_cl/27Aug19a.jpg" height="150" width="375">
+							<caption>Ed & Cathy Lopez, Bartow, FL 33830</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
