added georgia section

--- a/index.html
+++ b/index.html
@@ -507,6 +507,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-ga">
+					<h3>Georgia</h3>
+					<div id="usa-ga-300">
+						<h4>Atlanta Metro (300)</h4>
+						<div id="usa-ga-300-c-1">
+							<img src="usa/ga/300/c/10Mar20a.jpg" height="150" width="375">
+							<caption>Cathy, Cleveland, GA 30528</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
