added wf to atlanta

--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@
 							<img src="usa/ga/300/c/10Mar20a.jpg" height="150" width="375">
 							<caption>Cathy, Cleveland, GA 30528</caption>
 						</div>
+						<div id="usa-ga-300-wf-1">
+							<img src="usa/ga/300/wf/10Mar20a.jpg" height="150" width="375">
+							<caption>Watson Family, Alpharetta, GA 30022</caption>
+						</div>
 					</div>
 				</div>
 			</div>
