added louisiana section

--- a/index.html
+++ b/index.html
@@ -531,6 +531,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-la">
+					<h3>Louisiana</h3>
+					<div id="usa-la-700">
+						<h4>New Orleans (700)</h4>
+						<div id="usa-la-700-hkj-1">
+							<img src="usa/la/700/hkj/13Dec19a.jpg" height="150" width="375">
+							<caption>Hank & Kay Johnston, River Ridge, LA 70123</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
