--- a/initials.html
+++ b/initials.html
@@ -44,6 +44,10 @@
 				<td>mj</td>
 			</tr>
 			<tr>
+				<td>Johnston, Hank & Kay</td>
+				<td>hkj</td>
+			</tr>
+			<tr>
 				<td>Kennedy Family</td>
 				<td>kf</td>
 			</tr>
