added massachusetts section

--- a/index.html
+++ b/index.html
@@ -541,6 +541,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-ma">
+					<h3>Massachusetts</h3>
+					<div id="usa-ma-021">
+						<h4>Boston (021)</h4>
+						<div id="usa-ma-021-cg-1">
+							<img src="usa/ma/021/cg/27Jan20a.jpg" height="150" width="375">
+							<caption>Caitlyn Gardiner, Boston, MA 02115</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
