--- a/initials.html
+++ b/initials.html
@@ -36,6 +36,10 @@
 				<td>ef</td>
 			</tr>
 			<tr>
+				<td>Gardiner, Caitlyn</td>
+				<td>cg</td>
+			</tr>
+			<tr>
 				<td>Hoffmann, Jason</td>
 				<td>jh</td>
 			</tr>
