added ps to boston

--- a/index.html
+++ b/index.html
@@ -549,6 +549,10 @@
 							<img src="usa/ma/021/cg/27Jan20a.jpg" height="150" width="375">
 							<caption>Caitlyn Gardiner, Boston, MA 02115</caption>
 						</div>
+						<div id="usa-ma-021-ps-1">
+							<img src="usa/ma/021/ps/21Dec13a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
 					</div>
 				</div>
 			</div>
