added second ps to boston

--- a/index.html
+++ b/index.html
@@ -553,6 +553,10 @@
 							<img src="usa/ma/021/ps/21Dec13a.jpg" height="150" width="375">
 							<caption>Patti Southerland, Payson, UT 84651</caption>
 						</div>
+						<div id="usa-ma-021-ps-2">
+							<img src="usa/ma/021/ps/18Dec15a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
 					</div>
 				</div>
 			</div>
