added maryland section

--- a/index.html
+++ b/index.html
@@ -559,6 +559,20 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-md">
+					<h3>Maryland</h3>
+					<div id="usa-md-212">
+						<h4>Baltimore (212)</h4>
+						<div id="usa-md-212-twc-1">
+							<img src="usa/md/212/twc/23Sep19a.jpg" height="150" width="375">
+							<caption>Tom & Whitney Cummins, Monrovia, MD 21770</caption>
+						</div>
+						<div id="usa-md-212-twc-2">
+							<img src="usa/md/212/twc/27Dec19a.jpg" height="150" width="375">
+							<caption>Tom & Whitney Cummins, Monrovia, MD 21770</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
