--- a/initials.html
+++ b/initials.html
@@ -32,6 +32,10 @@
 				<td>cf</td>
 			</tr>
 			<tr>
+				<td>Cummins, tom & Whitney</td>
+				<td>twc</td>
+			</tr>
+			<tr>
 				<td>English Family</td>
 				<td>ef</td>
 			</tr>
