added hu to baltimore

--- a/index.html
+++ b/index.html
@@ -571,6 +571,10 @@
 							<img src="usa/md/212/twc/27Dec19a.jpg" height="150" width="375">
 							<caption>Tom & Whitney Cummins, Monrovia, MD 21770</caption>
 						</div>
+						<div id="usa-md-212-hu-1">
+							<img src="usa/md/212/hu/3Dec19a.jpg" height="150" width="375">
+							<caption>Health Unlimited, Mt. Airy, MD 21771</caption>
+						</div>
 					</div>
 				</div>
 			</div>
