--- a/initials.html
+++ b/initials.html
@@ -44,6 +44,10 @@
 				<td>cg</td>
 			</tr>
 			<tr>
+				<td>Health Unlimited</td>
+				<td>hu</td>
+			</tr>
+			<tr>
 				<td>Hoffmann, Jason</td>
 				<td>jh</td>
 			</tr>
