added ks to baltimore

--- a/index.html
+++ b/index.html
@@ -575,6 +575,10 @@
 							<img src="usa/md/212/hu/3Dec19a.jpg" height="150" width="375">
 							<caption>Health Unlimited, Mt. Airy, MD 21771</caption>
 						</div>
+						<div id="usa-md-212-ks-1">
+							<img src="usa/md/212/ks/11Dec19a.jpg" height="150" width="375">
+							<caption>Karen Schlossberg, Mt. Airy, MD 21771</caption>
+						</div>
 					</div>
 				</div>
 			</div>
