--- a/initials.html
+++ b/initials.html
@@ -88,6 +88,10 @@
 				<td>sm</td>
 			</tr>
 			<tr>
+				<td>Schlossberg, Karen</td>
+				<td>ks</td>
+			</tr>
+			<tr>
 				<td>Southerland, Patti</td>
 				<td>ps</td>
 			</tr>
