added damascus to md section

--- a/index.html
+++ b/index.html
@@ -580,6 +580,13 @@
 							<caption>Karen Schlossberg, Mt. Airy, MD 21771</caption>
 						</div>
 					</div>
+					<div id="usa-md-20872">
+						<h4>Damascus (20872)</h4>
+						<div id="usa-md-20872-el-1">
+							<img src="usa/md/20872/el/27Dec19a.jpg" height="150" width="375">
+							<caption>Eamonn Lopez, Damascus, MD 20872</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
