--- a/initials.html
+++ b/initials.html
@@ -64,6 +64,10 @@
 				<td>kf</td>
 			</tr>
 			<tr>
+				<td>Lopez, Eamonn</td>
+				<td>el</td>
+			</tr>
+			<tr>
 				<td>Lopez, Ed & Cathy</td>
 				<td>e_cl</td>
 			</tr>
