--- a/index.html
+++ b/index.html
@@ -591,9 +591,16 @@
 				<div id="usa-mi">
 					<h3>Michigan</h3>
 					<div id="usa-mi-495">
-						<h4>Grand Rapids</h4>
+						<h4>Grand Rapids (495)</h4>
 						<div id="usa-mi-495-ps-1">
 							<img src="usa/mi/495/ps/9Dec19a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+					<div id="usa-mi-480">
+						<h4>Metroplex (480)</h4>
+						<div id="usa-mi-480-ps-1">
+							<img src="usa/mi/480/ps/13Dec10a.jpg" height="150" width="375">
 							<caption>Patti Southerland, Payson, UT 84651</caption>
 						</div>
 					</div>
