added missouri section

--- a/index.html
+++ b/index.html
@@ -605,6 +605,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-mo">
+					<h3>Missouri</h3>
+					<div id="usa-mo-640">
+						<h4>Kansas City (640)</h4>
+						<div id="usa-mo-640-u-1">
+							<img src="usa/mo/640/u/12Sep19a.jpg" height="150" width="375">
+							<caption>Unknown, Morton Grove, IL 60053</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
