added st. louis to mo section

--- a/index.html
+++ b/index.html
@@ -614,6 +614,13 @@
 							<caption>Unknown, Morton Grove, IL 60053</caption>
 						</div>
 					</div>
+					<div id="usa-mo-630">
+						<h4>St. Louis (630)</h4>
+						<div id="usa-mo-630-lt-1">
+							<img src="usa/mo/630/lt/23Jun19a.jpg" height="150" width="375">
+							<caption>Lisa Thess, O'Fallon, MO 63367</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
