--- a/initials.html
+++ b/initials.html
@@ -104,6 +104,10 @@
 				<td>it</td>
 			</tr>
 			<tr>
+				<td>Thess, Lisa</td>
+				<td>lt</td>
+			</tr>
+			<tr>
 				<td>University of Maryland Extension Office Montgomery County</td>
 				<td>umem</td>
 			</tr>
