added ps to mo/630

--- a/index.html
+++ b/index.html
@@ -620,6 +620,14 @@
 							<img src="usa/mo/630/lt/23Jun19a.jpg" height="150" width="375">
 							<caption>Lisa Thess, O'Fallon, MO 63367</caption>
 						</div>
+						<div id="usa-mo-630-ps-1">
+							<img src="usa/mo/630/ps/22Dec18a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+						<div id="usa-mo-630-ps-2">
+							<img src="usa/mo/630/ps/19Dec19a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
 					</div>
 				</div>
 			</div>
