added nebraska section

--- a/index.html
+++ b/index.html
@@ -630,6 +630,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-ne">
+					<h3>Nebraska</h3>
+					<div id="usa-ne-680">
+						<h4>Omaha (680)</h4>
+						<div id="usa-ne-680-jh-1">
+							<img src="usa/ne/680/jh/29Nov19a.jpg" height="150" width="375">
+							<caption>Jason Hoffmann, Gaithersburg, MD 20882</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
