added new hampshire section

--- a/index.html
+++ b/index.html
@@ -640,6 +640,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-nh">
+					<h3>New Hampshire</h3>
+					<div id="usa-nh-030">
+						<h4>Manchester (030)</h4>
+						<div id="usa-nh-030-lf-1">
+							<img src="usa/nh/030/lf/13Dec19a.jpg" height="150" width="375">
+							<caption>Lewis Family, Bedford, NH 03110</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
