--- a/initials.html
+++ b/initials.html
@@ -64,6 +64,10 @@
 				<td>kf</td>
 			</tr>
 			<tr>
+				<td>Lewis Family</td>
+				<td>lf</td>
+			</tr>
+			<tr>
 				<td>Lopez, Eamonn</td>
 				<td>el</td>
 			</tr>
