added new york section

--- a/index.html
+++ b/index.html
@@ -650,6 +650,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-ny">
+					<h3>New York</h3>
+					<div id="usa-ny-112">
+						<h4>Triboro (Brooklyn, Queens, Staten I.) (112)</h4>
+						<div id="usa-ny-112-ps-1">
+							<img src="usa/ny/112/ps/13Dec10a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
