added westchester section to ny

--- a/index.html
+++ b/index.html
@@ -659,6 +659,13 @@
 							<caption>Patti Southerland, Payson, UT 84651</caption>
 						</div>
 					</div>
+					<div id="usa-ny-105">
+						<h4>Westchester (105)</h4>
+						<div id="usa-ny-105-kf-1">
+							<img src="usa/ny/105/kf/16Dec19a.jpg" height="150" width="375">
+							<caption>Kennedy Family, Sparkill, NY 10976</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
