added ohio section

--- a/index.html
+++ b/index.html
@@ -667,6 +667,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-oh">
+					<h3>Ohio</h3>
+					<div id="usa-oh-440">
+						<h4>Cleveland (440)</h4>
+						<div id="usa-oh-440-ps-1">
+							<img src="usa/oh/440/ps/10Dec19a.jpg" height="150" width="375">
+							<caption>Patti Southerland, Payson, UT 84651</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
