added oregon section

--- a/index.html
+++ b/index.html
@@ -684,6 +684,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-or">
+					<h3>Oregon</h3>
+					<div id="usa-or-972">
+						<h4>Portland (972)</h4>
+						<div id="usa-or-972-twc-1">
+							<img src="usa/or/972/twc/20Sep19a.jpg" height="150" width="375">
+							<caption>Tom & Whitney Cummins, Monrovia, MD 21770</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
