added hf to portland

--- a/index.html
+++ b/index.html
@@ -692,6 +692,10 @@
 							<img src="usa/or/972/twc/20Sep19a.jpg" height="150" width="375">
 							<caption>Tom & Whitney Cummins, Monrovia, MD 21770</caption>
 						</div>
+						<div id="usa-or-972-hf-1">
+							<img src="usa/or/972/hf/7Dec19a.jpg" height="150" width="375">
+							<caption>Hilbert Family, Keizer, OR 97303s</caption>
+						</div>
 					</div>
 				</div>
 			</div>
