added cf to portland

--- a/index.html
+++ b/index.html
@@ -694,7 +694,11 @@
 						</div>
 						<div id="usa-or-972-hf-1">
 							<img src="usa/or/972/hf/7Dec19a.jpg" height="150" width="375">
-							<caption>Hilbert Family, Keizer, OR 97303s</caption>
+							<caption>Hilbert Family, Keizer, OR 97303</caption>
+						</div>
+						<div id="usa-or-972-cf-1">
+							<img src="usa/or/972/cf/18Feb20a.jpg" height="150" width="375">
+							<caption>Will & Jillian Cromar, Seattle, WA 98109</caption>
 						</div>
 					</div>
 				</div>
