added pennsylvania section

--- a/index.html
+++ b/index.html
@@ -702,6 +702,16 @@
 						</div>
 					</div>
 				</div>
+				<div id="usa-pa">
+					<h3>Pennsylvania</h3>
+					<div id="usa-pa-171">
+						<h4>Harrisburg (171)</h4>
+						<div id="usa-pa-171-mah-1">
+							<img src="usa/pa/171/mah/9Jul19a.jpg" height="150" width="375">
+							<caption>Mary Allison Heise, York, PA 17406</caption>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
