--- a/initials.html
+++ b/initials.html
@@ -48,6 +48,10 @@
 				<td>hu</td>
 			</tr>
 			<tr>
+				<td>Heise, Mary Allison</td>
+				<td>mah</td>
+			</tr>
+			<tr>
 				<td>Hilbert Family</td>
 				<td>hf</td>
 			</tr>
