added philadelphia to pa section

--- a/index.html
+++ b/index.html
@@ -711,6 +711,13 @@
 							<caption>Mary Allison Heise, York, PA 17406</caption>
 						</div>
 					</div>
+					<div id="usa-pa-190">
+						<h4>Philadelphia (190)</h4>
+						<div id="usa-pa-190-bsnj-1">
+							<img src="usa/pa/190/bsnj/14Feb20a.jpg" height="150" width="375">
+							<caption>Battleship New Jersey, Camden, NJ 08103</caption>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
