--- a/initials.html
+++ b/initials.html
@@ -16,6 +16,10 @@
 				<td>u</td>
 			</tr>
 			<tr>
+				<td>Battleship New Jersey</td>
+				<td>bsnj</td>
+			</tr>
+			<tr>
 				<td>Cathy (Unknown Last Name)</td>
 				<td>c</td>
 			</tr>
